--- a/2048/2048.css
+++ b/2048/2048.css
@@ -1,3 +1,6 @@
+.textCenter{
+  text-align:center;
+}
 #gridPanel{width:480px; height:480px;
   margin:0 auto; position:relative;
   background:#bbada0; border-radius:10px;
